--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint": "^7.9.0",
     "eslint-config-standard-with-typescript": "^16.0.0",
@@ -30,5 +31,8 @@
     "lint-staged": "^10.3.0",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "validator": "^13.1.1"
   }
 }
